--- a/src/Scss/Liabrary/_pagination.scss
+++ b/src/Scss/Liabrary/_pagination.scss
@@ -1,3 +1,8 @@
+.pagination{
+  list-style-type: none;
+    display: inline-flex;
+}
+
 .pagination-container {
     display: flex;
     list-style-type: none;
