--- a/src/Scss/Liabrary/_productCard.scss
+++ b/src/Scss/Liabrary/_productCard.scss
@@ -1,8 +1,9 @@
 .card {
-    padding-bottom: 20px;
+    padding-bottom: 2rem;
+    
 
     &:not(:nth-child(3n)) {
-        padding-right: 1.5em;
+        padding-right: 1.5rem;
     }
 
     .product-text {
@@ -11,7 +12,7 @@
 
     .product-image img {
         width: 100%;
-        height: 18.75rem;
+        height: 38.2rem;
 
 
     }
@@ -22,20 +23,20 @@
         color: $col-black;
 
         .product-title {
-            font: normal normal bold 18px/20px Muli;
-            font-size: 18px;
+            font: normal normal bold 1.8rem/2rem Muli;
+            font-size: 1.8rem;
             letter-spacing: 0px;
             opacity: 1;
         }
 
         .product-price {
-            font: normal normal 600 16px/20px Muli;
+            font: normal normal 600 1.6rem/2rem Muli;
         }
 
         img {
-            width: 24px;
-            height: 20px;
-            padding-top: 4px;
+            width: 2.4rem;
+            height: 2rem;
+            padding-top: .4rem;
         }
 
 
@@ -44,8 +45,30 @@
     .fav-icon {
         width: 100%;
     }
+    
+
 }
+.pagination{
+    list-style-type: none;
+      display: inline-flex;
+      
+      ul li{
+          padding: 1rem;
+          color: black;
+      }
+  }
 
 .container .card-container {
-    padding-top: 24px;
+    padding-top: 2.4rem;
+   
+    .body-container{
+        font-size:1.6rem;
+        padding-bottom: 2.6rem;
+    }
+    
+}
+@media (min-width: 320px) and (max-width: 767px){
+    .pagination{
+        display: none;
+    }
 }
