--- a/src/Scss/Liabrary/_navbar.scss
+++ b/src/Scss/Liabrary/_navbar.scss
@@ -4,6 +4,10 @@ nav {
     
     place-items: center;
     padding-bottom: 16px;
+    .logo-align{
+        display:flex;
+        
+    }
 
     ul {
         list-style-type: none;
@@ -46,4 +50,62 @@ nav {
 
         }
     }
+    .toggle{
+        padding-top: 18px;
+        padding-left: 18px;
+    }
+    .hamburger {
+        // removes default border on button element
+        border: 0;
+        height: 40px;
+        width: 40px;
+        padding: 0.5rem;
+        border-radius: 50%;
+        background-color:white;
+        cursor: pointer;
+        transition: background-color 0.2s ease-in-out;
+      // positions the icon to the right and center aligns it vertically
+        // position: absolute;
+        top: 35%;
+        right: 25px;
+        transform: translateY(-50%);
+        display: none;
+      }
+      .hamburger:hover {
+        background-color: #2642af;
+      }
+      @media (min-width: 320px) and (max-width: 767px) {
+        .hamburger {
+                  display: block;
+                  
+                }
+                .logo{
+                    padding-left: 96px;
+               }
+         .main-menu {
+             display:none
+         }       
+         .sign-in  {
+            float:right;
+            display: contents;
+            li{
+                padding-right: 12px;
+            }
+            span{
+                display: none;
+            }
+            .Signin{
+                display: none;
+            }
+        }
+    }
 }
+
+// @media screen and (max-width: 768px) {
+//     .hamburger {
+//       display: block;
+//     }
+//     ul{
+//         display: none;
+//     }
+//   }
