--- a/src/Scss/index.css
+++ b/src/Scss/index.css
@@ -5718,29 +5718,36 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 hr {
-  border: 1px solid #e5e5e7;
+  border: 0.1rem solid #e5e5e7;
 }
 
 .bold {
-  border: 2px solid #e5e5e7;
+  border: 0.2rem solid #e5e5e7;
 }
 
 .body-container {
-  padding-top: 45px;
+  padding-top: 4.5rem;
   text-align: left;
   display: flex;
 }
 .body-container select {
   margin-left: auto;
-  border-radius: 5px;
-  padding: 5px;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
 }
 
 nav {
   padding-top: 16px;
   place-items: center;
   padding-bottom: 16px;
+}
+nav .logo-align {
+  display: flex;
 }
 nav ul {
   list-style-type: none;
@@ -5776,6 +5783,51 @@ nav ul li .img-3 {
   width: 22px;
   height: 24px;
   padding-right: 8px;
+}
+nav .toggle {
+  padding-top: 18px;
+  padding-left: 18px;
+}
+nav .hamburger {
+  border: 0;
+  height: 40px;
+  width: 40px;
+  padding: 0.5rem;
+  border-radius: 50%;
+  background-color: white;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  top: 35%;
+  right: 25px;
+  transform: translateY(-50%);
+  display: none;
+}
+nav .hamburger:hover {
+  background-color: #2642af;
+}
+@media (min-width: 320px) and (max-width: 767px) {
+  nav .hamburger {
+    display: block;
+  }
+  nav .logo {
+    padding-left: 96px;
+  }
+  nav .main-menu {
+    display: none;
+  }
+  nav .sign-in {
+    float: right;
+    display: contents;
+  }
+  nav .sign-in li {
+    padding-right: 12px;
+  }
+  nav .sign-in span {
+    display: none;
+  }
+  nav .sign-in .Signin {
+    display: none;
+  }
 }
 
 .filter-container {
@@ -5842,7 +5894,7 @@ nav ul li .img-3 {
 }
 
 .main {
-  padding: 33px 100px 0 100px;
+  padding: 33px 100px 30px 100px;
 }
 
 .single img {
@@ -5900,11 +5952,11 @@ nav ul li .img-3 {
   text-decoration: none;
 }
 .detail-info .color .size span {
-  padding-right: 16px;
+  padding-right: 1.6rem;
 }
 .detail-info .color .size button {
-  width: 64px;
-  height: 40px;
+  width: 5.4rem;
+  height: 4rem;
   border: 2px solid var(--gray-m1);
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border: 2px solid #91959C;
@@ -5982,6 +6034,18 @@ nav ul li .img-3 {
   padding-bottom: 16px;
 }
 
+@media (min-width: 0px) and (max-width: 767px) {
+  .detail-info .color .add-sub {
+    text-align: center;
+  }
+  .detail-info button .cart-add {
+    place-items: center;
+  }
+
+  .main h6, h3 {
+    text-align: center;
+  }
+}
 .color {
   display: inline;
 }
@@ -6120,17 +6184,17 @@ nav ul li .img-3 {
   }
 }
 .card {
-  padding-bottom: 20px;
+  padding-bottom: 2rem;
 }
 .card:not(:nth-child(3n)) {
-  padding-right: 1.5em;
+  padding-right: 1.5rem;
 }
 .card .product-text {
   text-decoration: none;
 }
 .card .product-image img {
   width: 100%;
-  height: 18.75rem;
+  height: 38.2rem;
 }
 .card .product-details {
   text-align: left;
@@ -6138,27 +6202,45 @@ nav ul li .img-3 {
   color: #172026;
 }
 .card .product-details .product-title {
-  font: normal normal bold 18px/20px Muli;
-  font-size: 18px;
+  font: normal normal bold 1.8rem/2rem Muli;
+  font-size: 1.8rem;
   letter-spacing: 0px;
   opacity: 1;
 }
 .card .product-details .product-price {
-  font: normal normal 600 16px/20px Muli;
+  font: normal normal 600 1.6rem/2rem Muli;
 }
 .card .product-details img {
-  width: 24px;
-  height: 20px;
-  padding-top: 4px;
+  width: 2.4rem;
+  height: 2rem;
+  padding-top: 0.4rem;
 }
 .card .fav-icon {
   width: 100%;
 }
 
-.container .card-container {
-  padding-top: 24px;
+.pagination {
+  list-style-type: none;
+  display: inline-flex;
+}
+.pagination ul li {
+  padding: 1rem;
+  color: black;
 }
 
+.container .card-container {
+  padding-top: 2.4rem;
+}
+.container .card-container .body-container {
+  font-size: 1.6rem;
+  padding-bottom: 2.6rem;
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .pagination {
+    display: none;
+  }
+}
 .container {
   margin-right: auto;
   margin-left: auto;
@@ -6205,7 +6287,8 @@ nav ul li .img-3 {
   background-color: black;
   color: #FFFFFF;
   place-items: center;
-  padding: 103px;
+  padding: 85px;
+  font: normal normal 600 36px/42px Source Serif Pro;
 }
 
 .hero-image {
@@ -6215,6 +6298,7 @@ nav ul li .img-3 {
 
 .subheader {
   visibility: hidden;
+  font: normal normal 600 36px/42px Source Serif Pro;
 }
 
 .bar {
@@ -6223,6 +6307,17 @@ nav ul li .img-3 {
   background-color: #1F39FF;
 }
 
+@media (max-width: 768px) {
+  .subheader {
+    visibility: visible;
+  }
+
+  .header {
+    padding-top: 0;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
 .logo {
   height: 27px;
 }
@@ -6254,6 +6349,21 @@ nav ul li .img-3 {
 .cart-Container .cart-products .added-product img {
   width: auto;
   height: 199px;
+  border: 1px solid #D1D3D6;
+}
+.cart-Container .cart-products .added-product .cart-prod-detail {
+  padding: 5px;
+}
+.cart-Container .cart-products .added-product .cart-prod-detail b {
+  text-align: left;
+  font: normal normal 600 20px/25px Muli;
+  letter-spacing: 0px;
+  color: #172026;
+}
+.cart-Container .cart-products .added-product .cart-prod-detail p {
+  font: normal normal normal 16px/24px Muli;
+  letter-spacing: 0px;
+  color: #172026;
 }
 .cart-Container .btn {
   padding-top: 55px;
@@ -6279,16 +6389,37 @@ nav ul li .img-3 {
   padding: 3px 10px;
 }
 .cart-Container .pricing-total {
-  text-align: left;
-  border: 1px solid black;
+  width: 435px;
+  height: 463px;
   padding: 10px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.0509803922);
+  border: 1px solid #D1D3D6;
+  border-radius: 2px;
 }
 .cart-Container .pricing-total h4 {
+  padding-top: 32px;
   padding-bottom: 24px;
+  text-align: left;
 }
 .cart-Container .pricing-total p {
   padding-bottom: 16px;
+  font: normal normal normal 16px/24px Muli;
+  letter-spacing: 0px;
+  color: #172026;
+  text-align: left;
 }
 .cart-Container .pricing-total p span {
   float: right;
+}
+.cart-Container .pricing-total .Primary-brand {
+  font: normal normal bold 14px/16px Muli;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  opacity: 1;
+  background: #1F39FF 0% 0% no-repeat padding-box;
+  border-radius: 28px;
+  border: none;
+  padding: 11px 73px 11px 73px;
 }/*# sourceMappingURL=index.css.map */
